--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             window.location.href = "dashboard.html";
           } else {
             alert("Kindly make the payment and enroll in the course.");
-            window.location.href = "courses.html";
+            window.location.href = "profile.html";
           }
 
         });
