--- a/admin.html
+++ b/admin.html
@@ -117,7 +117,7 @@
 
 <script>
 
-const ADMIN_EMAIL = "ADMIN_EMAIL_HERE"; // 🔴 Replace this
+const ADMIN_EMAIL = hisacademyofficial@gmail.com; // 🔴 Replace this
 
 const firebaseConfig = {
   apiKey: "AIzaSyCehyZQukDfslKTY_u9yXcUrzGtMNHvuPA",
