--- a/admin.html
+++ b/admin.html
@@ -176,7 +176,7 @@
 <script>
 
 const SECRET_KEY = "Gokulgroups";
-const ADMIN_EMAIL = "youradminemail@gmail.com"; // 🔴 CHANGE THIS
+const ADMIN_EMAIL = "hisacademyofficial@gmail.com; // 🔴 CHANGE THIS
 
 const firebaseConfig = {
   apiKey: "AIzaSyCehyZQukDfslKTY_u9yXcUrzGtMNHvuPA",
@@ -206,7 +206,7 @@ function validateAdmin(){
       return;
     }
     if(user.email !== ADMIN_EMAIL){
-      alert("Unauthorized");
+      alert("You are not my boss get lost ****");
       window.location.href="profile.html";
       return;
     }
