--- a/admin.html
+++ b/admin.html
@@ -206,7 +206,7 @@ function validateAdmin(){
       return;
     }
     if(user.email !== ADMIN_EMAIL){
-      alert("You are not my boss get lost ****");
+      alert("Unauthorized");
       window.location.href="profile.html";
       return;
     }
